[gd_scene load_steps=5 format=3 uid="uid://csscajjy1j8ng"]

[ext_resource type="Script" path="res://Menus/MainMenu/MainMenu.gd" id="1_2updb"]
[ext_resource type="Texture2D" uid="uid://bo6uh4pklrhnx" path="res://Menus/MainMenu/MainMenuBackground.jpg" id="2_o7co4"]
[ext_resource type="Texture2D" uid="uid://lqyv6vtri1j0" path="res://Menus/MainMenu/EldritchLogoTemp2.png" id="3_uidlp"]

[sub_resource type="SystemFont" id="SystemFont_thnep"]
font_names = PackedStringArray("SimSun")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2updb")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -22.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Sprite2D2" type="Sprite2D" parent="BoxContainer"]
scale = Vector2(1.25584, 1.10801)
texture = ExtResource("2_o7co4")

[node name="Sprite2D" type="Sprite2D" parent="BoxContainer"]
texture = ExtResource("3_uidlp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -139.0
offset_right = 103.0
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_thnep")
theme_override_font_sizes/font_size = 27
text = "New Game"

[node name="LoadGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_thnep")
theme_override_font_sizes/font_size = 27
text = "Load Game"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_thnep")
theme_override_font_sizes/font_size = 27
text = "Settings"

[node name="QuitGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_thnep")
theme_override_font_sizes/font_size = 27
text = "Quit Game"

[connection signal="pressed" from="MarginContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
